--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,5 @@
-APP_PASSWORD=#
-DB_PASSWORD=#
-API_URI=http://server:4000
-
+APP_PASSWORD="" # Define strong password
+DB_PASSWORD="" # Define strong password
 DB_USER=neo4j
-DB_URI=neo4j://neo4j:7687
-
-NEO4J_AUTH=neo4j/${DB_PASSWORD}
-NEO4JLABS_PLUGINS="[\"apoc\"]"
-NEO4J_dbms_security_procedures_whitelist="apoc.*"
-NEO4J_dbms_security_procedures_unrestricted="apoc.*"
+DB_URI=bolt://neo4j:7687
+NEO4J_AUTH=${DB_USER}/${DB_PASSWORD}
