feat: app structure and layout

--- a/package.json
+++ b/package.json
@@ -17,10 +17,13 @@
     "@types/node": "18.11.18",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.10",
+    "@typescript-eslint/eslint-plugin": "^5.48.0",
+    "@typescript-eslint/parser": "^5.48.0",
     "eslint": "8.31.0",
     "eslint-config-next": "13.1.1",
     "eslint-config-prettier": "8.6.0",
     "eslint-plugin-prettier": "4.2.1",
+    "eslint-plugin-react": "^7.31.11",
     "next-pwa": "5.6.0",
     "prettier": "2.8.1",
     "ts-node": "^10.9.1",
