--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,13 +1,20 @@
 {
-  "plugins": ["prettier"],
-  "extends": ["next/core-web-vitals", "plugin:prettier/recommended"],
+  "parser": "@typescript-eslint/parser",
+  "plugins": ["prettier", "@typescript-eslint"],
+  "extends": [
+    "next",
+    "next/core-web-vitals",
+    "plugin:@typescript-eslint/recommended",
+    "plugin:prettier/recommended"
+  ],
   "rules": {
-    "no-extra-boolean-cast": "off",
-    "react/react-in-jsx-scope": "off",
-    "no-unused-vars": "warn",
+    "@typescript-eslint/no-explicit-any": "off",
     "no-console": "warn",
+    "no-extra-boolean-cast": "off",
+    "no-unused-vars": "off",
     "react/display-name": "error",
     "react/prop-types": "error",
+    "react/react-in-jsx-scope": "off",
     "prettier/prettier": [
       "warn",
       {
