--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/node": "18.11.18",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.10",
+    "@types/ua-parser-js": "^0.7.36",
     "@typescript-eslint/eslint-plugin": "^5.48.0",
     "@typescript-eslint/parser": "^5.48.0",
     "eslint": "8.31.0",
@@ -41,6 +42,8 @@
     "neo4j-driver": "^5.3.0",
     "next": "13.1.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-os-icons": "^1.0.6",
+    "ua-parser-js": "^1.0.32"
   }
 }
