--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "devDependencies": {
     "@types/node": "18.11.18",
+    "@types/prismjs": "^1.26.0",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.10",
     "@types/react-syntax-highlighter": "^15.5.6",
@@ -39,9 +40,12 @@
     "@mui/material": "^5.11.3",
     "@neo4j/graphql-ogm": "^3.14.2",
     "@next/font": "13.1.1",
+    "@toast-ui/editor-plugin-code-syntax-highlight": "^3.1.0",
+    "@toast-ui/react-editor": "^3.2.2",
     "graphql": "^16.6.0",
     "neo4j-driver": "^5.3.0",
     "next": "13.1.1",
+    "prismjs": "^1.29.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-markdown": "^8.0.4",
