--- a/package.json
+++ b/package.json
@@ -7,52 +7,54 @@
   "author": "Raí B. Toffoletto",
   "repository": "https://github.com/raibtoffoletto/excerpta.git",
   "scripts": {
+    "build": "next build",
     "dev:db-rm": "docker rm -f -v neo4j-dev",
     "dev:db": "docker run --restart always --name neo4j-dev -p7474:7474 -p7687:7687 -m 1g -v ${PWD}/.db/data:/data -v ${PWD}/.db/logs:/logs -d -e NEO4J_AUTH=neo4j/password -e NEO4JLABS_PLUGINS=\"[\\\"apoc\\\"]\" -e NEO4J_dbms_security_procedures_allowlist=\"apoc.*\" -e NEO4J_apoc_export_file_enabled=true -e NEO4J_apoc_import_file_enabled=true -e NEO4J_apoc_import_file_use__neo4j__config=true neo4j",
     "dev": "next dev",
     "generate": "ts-node lib/database/generateTypes.ts",
-    "lint": "tsc --noEmit && next lint"
+    "lint": "tsc --noEmit && next lint",
+    "update": "npx npm-check-updates"
   },
   "devDependencies": {
     "@types/node": "18.11.18",
-    "@types/prismjs": "^1.26.0",
+    "@types/prismjs": "1.26.0",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.10",
-    "@types/react-syntax-highlighter": "^15.5.6",
-    "@types/ua-parser-js": "^0.7.36",
-    "@typescript-eslint/eslint-plugin": "^5.48.0",
-    "@typescript-eslint/parser": "^5.48.0",
+    "@types/react-syntax-highlighter": "15.5.6",
+    "@types/ua-parser-js": "0.7.36",
+    "@typescript-eslint/eslint-plugin": "5.48.1",
+    "@typescript-eslint/parser": "5.48.1",
     "eslint": "8.31.0",
     "eslint-config-next": "13.1.1",
     "eslint-config-prettier": "8.6.0",
     "eslint-plugin-prettier": "4.2.1",
-    "eslint-plugin-react": "^7.31.11",
+    "eslint-plugin-react": "7.31.11",
     "next-pwa": "5.6.0",
-    "prettier": "2.8.1",
-    "ts-node": "^10.9.1",
+    "prettier": "2.8.2",
+    "ts-node": "10.9.1",
     "typescript": "4.9.4"
   },
   "dependencies": {
-    "@emotion/react": "^11.10.5",
-    "@emotion/styled": "^11.10.5",
-    "@mui/icons-material": "^5.11.0",
-    "@mui/lab": "^5.0.0-alpha.114",
-    "@mui/material": "^5.11.3",
-    "@neo4j/graphql-ogm": "^3.14.2",
+    "@emotion/react": "11.10.5",
+    "@emotion/styled": "11.10.5",
+    "@mui/icons-material": "5.11.0",
+    "@mui/lab": "5.0.0-alpha.115",
+    "@mui/material": "5.11.4",
+    "@neo4j/graphql-ogm": "3.14.2",
     "@next/font": "13.1.1",
-    "@toast-ui/editor-plugin-code-syntax-highlight": "^3.1.0",
-    "@toast-ui/react-editor": "^3.2.2",
-    "graphql": "^16.6.0",
-    "neo4j-driver": "^5.3.0",
+    "@toast-ui/editor-plugin-code-syntax-highlight": "3.1.0",
+    "@toast-ui/react-editor": "3.2.2",
+    "graphql": "16.6.0",
+    "neo4j-driver": "5.4.0",
     "next": "13.1.1",
-    "prismjs": "^1.29.0",
+    "prismjs": "1.29.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-markdown": "^8.0.4",
-    "react-os-icons": "^1.0.6",
-    "react-syntax-highlighter": "^15.5.0",
-    "rehype-raw": "^6.1.1",
-    "remark-gfm": "^3.0.1",
-    "ua-parser-js": "^1.0.32"
+    "react-markdown": "8.0.4",
+    "react-os-icons": "1.0.6",
+    "react-syntax-highlighter": "15.5.0",
+    "rehype-raw": "6.1.1",
+    "remark-gfm": "3.0.1",
+    "ua-parser-js": "1.0.32"
   }
 }
