fix: build command conflit

--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -5,21 +5,19 @@ on:
     types: [published]
 
 jobs:
-
   build:
-
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v3
-    - name: Get curreant version
-      run: echo "TAG_VERSION=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV    
-    - name: Docker Hub SignIn
-      env:
-        DOCKER_HUB_USER: ${{secrets.DOCKER_HUB_USER}}
-        DOCKER_HUB_TOKEN: ${{secrets.DOCKER_HUB_TOKEN}}
-      run: docker login -u $DOCKER_HUB_USER -p $DOCKER_HUB_TOKEN
-    - name: Build the Docker image
-      run: docker build . --tag raibtoffoletto/excerpta:$TAG_VERSION
-    - name: Push the Docker image
-      run: docker push raibtoffoletto/excerpta:$TAG_VERSION
+      - uses: actions/checkout@v3
+      - name: Get curreant version
+        run: echo "TAG_VERSION=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV && echo $TAG_VERSION
+      - name: Docker Hub SignIn
+        env:
+          DOCKER_HUB_USER: ${{secrets.DOCKER_HUB_USER}}
+          DOCKER_HUB_TOKEN: ${{secrets.DOCKER_HUB_TOKEN}}
+        run: docker login -u $DOCKER_HUB_USER -p $DOCKER_HUB_TOKEN
+      - name: Build the Docker image
+        run: docker build . --tag raibtoffoletto/excerpta:$TAG_VERSION
+      - name: Push the Docker image
+        run: docker push raibtoffoletto/excerpta:$TAG_VERSION
